trying to fix white gap when scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+  height: 100%;
 }
 
 :root {
